ai-gateway/resources/base/08-provider-traffic-shift/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openai
  namespace: gloo-system
spec:
  parentRefs:
    - name: ai-gateway
      namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /openai
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /v1/chat/completions
    backendRefs:
      - group: gloo.solo.io
        kind: Upstream
        name: ollama-qwen-0.5-upstream
        namespace: gloo-system
        weight: 50
      - group: gloo.solo.io
        kind: Upstream
        name: openai
        namespace: gloo-system
        weight: 50
